# DatasetBotForGame

./: .gitignore  .pre-commit-config.yaml  CommandClass.py  README.md  keyboards.py  llm_model.py  main.py  password.py  pyproject.toml  vk.py
bot_data/: encrypted_password.txt
datasets/: dataset_ru.json  test_ru.json
datasets/backups/: dataset_ru_backup_20241104_193605.json
